xboxdrv 0.7.2 - (06/Mar/2011)
=============================

* added --mimic-xpad-wireless
* added --device-usbid and --device-usbids
* added D-Bus support to the daemon
* added better handling of rounding errors when sending REL_
* added dpad-restrictor for X, Y or fourway restriction on the dpad
* added statistic modifier that counts how often buttons are pressed
* added support for multiple wireless controller in daemon
* added --priority to enable realtime scheduling priority
* added custom configuration for XBMC, see examples/xbmc.xboxdrv
* changed default timeout to 10msec, for more responsive mouse emulation
* changed meaning of -m, its now a shortcut for --modifier, not --mouse
* improved INIParser, can now handle KEY_#NUM style names without quotes
* improved mouse emulation
* removed obsolete xboxdrv-daemon script
* renamed --device-name to --device-names
* renamed --name to --device-name


xboxdrv 0.7.1 - (30/Jan/2011)
=============================

* added --match-group
* added --on-connect and --on-disconnect to xboxdrv --daemon
* added --usb-debug
* added --no-extra-events
* added support for Playstation button names (triangle,
  circle, square, cross, L1, L2, L3, R1, R2, R3)
* added ability to set LED per controller slot
* added [controller0/config0/modifier] style sections to the ini file
* added new match rules: usbserial=SERIAL, vendor=VENDOR, product=PRODUCT
  and property=PROPERTY:VALUE
* added some example configurations to examples/
* fixed issues with older libudev versions
* fixed LED not getting switched off on shutdown
* fixed some missing #include directives
* fixed axis inversion issue in --axismap
* fixed assertion in relative axis filter
* fixed --dpad-as-button
* fixed --dpad-only
* fixed --mimic-xpad
* fixed issue with using --trigger-as-zaxis in combination with axisfilter
* man-page updates and cleanup
* new version of runxboxdrv


xboxdrv 0.7.0 - (28/Jan/2011)
=============================

* switched to libusb-1.0