@@ -33,9 +33,9 @@ install: install-exec install-man
 
 install-exec: xboxdrv
 	install -D xboxdrv "${DESTDIR}${BINDIR}/xboxdrv"
+	install -D xboxdrvctl "${DESTDIR}${BINDIR}/xboxdrvctl"
 
 install-man:
-	install -D doc/xboxdrv-daemon.1 "${DESTDIR}${MANDIR}/man1/xboxdrv-daemon.1"
 	install -D doc/xboxdrv.1 "${DESTDIR}${MANDIR}/man1/xboxdrv.1"
 
 .PHONY : clean install install-exec install-man
