@@ -20,31 +20,28 @@ add libudev, libusb-1.0 to builddependencies
 
 # Ubuntu 10.10
 
-$ cd ../debian/
+$ cd ../debian/xboxdrv
 $ git checkout master
-$ git-import-orig -u 0.7.2 ~/projects/xboxdrv/htdocs/xboxdrv-linux-0.7.2.tar.bz2 
-$ dch -v "0.7.2-1" "xboxdrv 0.7.2 release"
+$ git-import-orig -u 0.7.3 ~/projects/xboxdrv/htdocs/xboxdrv-linux-0.7.3.tar.bz2 
+$ dch -v "0.7.3-1" "xboxdrv 0.7.3 release"
 $ git-buildpackage --git-no-create-orig --git-tag --git-builder="debuild -S"
-$ sudo pbuilder --build --basetgz /var/cache/pbuilder/base-maverick.tgz ../xboxdrv_0.7.2-1.dsc
-$ dput my-ppa ../xboxdrv_0.7.2-1_source.changes
+$ sudo pbuilder --build --basetgz /var/cache/pbuilder/base-maverick.tgz ../xboxdrv_0.7.3-1.dsc
+$ dput my-ppa ../xboxdrv_0.7.3-1_source.changes
 
 # Ubuntu 10.04 (LTS)
 
-$ cd ../debian/
+$ cd ../debian/xboxdrv
 $ git checkout master-lts
 $ git merge master
-$ dch -b -v "0.7.2-1~lucid1" --distribution lucid "xboxdrv 0.7.2 backport"
+$ dch -b -v "0.7.3-1~lucid1" --distribution lucid "xboxdrv 0.7.3 backport"
 $ git-buildpackage --git-no-create-orig --git-debian-branch=master-lts --git-tag --git-builder="debuild -S"
-$ sudo pbuilder --build --basetgz /var/cache/pbuilder/base-lucid.tgz ../xboxdrv_0.7.2-1~lucid1.dsc
-$ dput my-ppa ../xboxdrv_0.7.2-1~lucid1_source.changes
+$ sudo pbuilder --build --basetgz /var/cache/pbuilder/base-lucid.tgz ../xboxdrv_0.7.3-1~lucid1.dsc
+$ dput my-ppa ../xboxdrv_0.7.3-1~lucid1_source.changes
 
 
-Stuff to do before 0.7.2 release:
+Stuff to do before 0.7.3 release:
 =================================
 
-== Generic ==
-
-* add glib and dbus dependencies to .deb control file
 
 
 == Unsolved/WontFix ==
