@@ -1,10 +1,4 @@
-all: xboxdrv-daemon.1 xboxdrv.1
-
-xboxdrv-daemon.1: xboxdrv-daemon.xml Makefile
-	db2x_xsltproc --stylesheet man "$<" | db2x_manxml
-	xmlto xhtml -o xboxdrv-daemon.html -m config.xsl xboxdrv-daemon.xml
-	tidy -utf8 -indent -wrap 1000 -m xboxdrv-daemon.html/index.html
-#	docbook2x-texi "../build/doc/" "$<"
+all: xboxdrv.1
 
 xboxdrv.1: xboxdrv.xml Makefile
 	echo "<!ENTITY xboxdrv_version \"$$(cat ../VERSION)\">" > xboxdrv.ent
