@@ -1,3 +1,9 @@
+xboxdrv 0.7.3 - (??/Mar/2011)
+=============================
+
+* added xboxdrvctl to control the daemon
+
+
 xboxdrv 0.7.2 - (06/Mar/2011)
 =============================
 
